Posts API configurations added
