# server/common/api.yml
@@ -57,6 +57,47 @@ paths:
       responses:
         201:
           description: User created
+  /posts:
+    get:
+      tags:
+        - Posts
+      description: Fetch all posts
+      responses:
+        200:
+          description: Returns all posts
+          content: {}
+    post:
+      tags:
+        - Posts
+      description: Create a new post
+      requestBody:
+        description: a post
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/PostBody"
+        required: true
+      responses:
+        201:
+          description: Post created
+  /posts/{id}:
+    get:
+      tags:
+        - Posts
+      parameters:
+        - name: id
+          in: path
+          description: The id of the post to retrieve
+          required: true
+          schema:
+            type: integer
+      responses:
+        200:
+          description: Return the post with the specified id
+          content: {}
+        404:
+          description: Post not found
+          content: {}
   /examples/{id}:
     get:
       tags:
@@ -143,5 +184,4 @@ components:
         name:
           type: string
           example: no_stress
-
   # https://swagger.io/docs/specification/data-models/data-types/#array for more
